{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 27,
  "lineage": "847d3a36-702f-c0d1-7600-caa4eeab6870",
  "resources": [
    {
      "module": "module.aws-ec2-free-tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws-public-ec2-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:207567780191:instance/i-06c7ae65e19ad6efb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c7ae65e19ad6efb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca15b7ee0a53fb9e",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-54-85-5-56.compute-1.amazonaws.com",
            "public_ip": "54.85.5.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0195b98c6d3644848",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015279da7ef97e42c",
            "tags": {
              "Name": "dev-public-ec2-free-tier"
            },
            "tags_all": {
              "Name": "dev-public-ec2-free-tier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b23fdc556a20bdb"
            ]
          },
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-igw-free-tier",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:internet-gateway/igw-0c7a71a792fc2f522",
            "id": "igw-0c7a71a792fc2f522",
            "owner_id": "207567780191",
            "tags": {
              "Name": "dev-igw-free-tier"
            },
            "tags_all": {
              "Name": "dev-igw-free-tier"
            },
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "aws-nacl-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:network-acl/acl-03c0ede9af9174138",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03c0ede9af9174138",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "207567780191",
            "subnet_ids": [],
            "tags": {
              "Name": "dev-nacl-free-tier"
            },
            "tags_all": {
              "Name": "dev-nacl-free-tier"
            },
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a1-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01903153644d580d6",
            "network_acl_id": "acl-03c0ede9af9174138",
            "subnet_id": "subnet-015279da7ef97e42c"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a2-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-058b85f5d66d98271",
            "network_acl_id": "acl-03c0ede9af9174138",
            "subnet_id": "subnet-0f44c5359e5a10058"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a3-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d4067d31bacef6bb",
            "network_acl_id": "acl-03c0ede9af9174138",
            "subnet_id": "subnet-0bc23955a27de1c00"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nacl-free-tier",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "a4-nacl-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c537a32ab0cf2b8a",
            "network_acl_id": "acl-03c0ede9af9174138",
            "subnet_id": "subnet-0e171156e6009467e"
          },
          "dependencies": [
            "module.aws-nacl-free-tier.aws_network_acl.aws-nacl-free-tier",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rtb-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:route-table/rtb-0ae3fe539f1820166",
            "id": "rtb-0ae3fe539f1820166",
            "owner_id": "207567780191",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-rtb-private-us-east-1a"
            },
            "tags_all": {
              "Name": "dev-rtb-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rtb-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:route-table/rtb-0bf54ed926360e2e3",
            "id": "rtb-0bf54ed926360e2e3",
            "owner_id": "207567780191",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-rtb-private-us-east-1b"
            },
            "tags_all": {
              "Name": "dev-rtb-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:route-table/rtb-0dc8eeae635be9490",
            "id": "rtb-0dc8eeae635be9490",
            "owner_id": "207567780191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7a71a792fc2f522",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtb-public"
            },
            "tags_all": {
              "Name": "dev-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-igw-free-tier.aws_internet_gateway.aws-igw-free-tier",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1-aws-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf28707139c362b8",
            "route_table_id": "rtb-0dc8eeae635be9490",
            "subnet_id": "subnet-015279da7ef97e42c"
          },
          "dependencies": [
            "module.aws-igw-free-tier.aws_internet_gateway.aws-igw-free-tier",
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-public",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2-aws-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bdd047b70b1483f",
            "route_table_id": "rtb-0dc8eeae635be9490",
            "subnet_id": "subnet-0f44c5359e5a10058"
          },
          "dependencies": [
            "module.aws-igw-free-tier.aws_internet_gateway.aws-igw-free-tier",
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-public",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-public-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws-rtb-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ff61ff8ac3ebd7d",
            "route_table_id": "rtb-0ae3fe539f1820166",
            "subnet_id": "subnet-0bc23955a27de1c00"
          },
          "dependencies": [
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-private-us-east-1a",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1a",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-rtb-free-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws-rtb-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e5c6d66bbaa2407",
            "route_table_id": "rtb-0bf54ed926360e2e3",
            "subnet_id": "subnet-0e171156e6009467e"
          },
          "dependencies": [
            "module.aws-rtb-free-tier.aws_route_table.aws-rtb-private-us-east-1b",
            "module.aws-subnet-free-tier.aws_subnet.aws-subnet-private-us-east-1b",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group/sg-06b23fdc556a20bdb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06b23fdc556a20bdb",
            "ingress": [],
            "name": "aws-public-sg",
            "name_prefix": "",
            "owner_id": "207567780191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-public-sg-free-tier"
            },
            "tags_all": {
              "Name": "dev-public-sg-free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-0cb0b55f2a58c9745",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cb0b55f2a58c9745",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06b23fdc556a20bdb",
            "security_group_rule_id": "sgr-0cb0b55f2a58c9745",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-04c887e5f2b6ea771",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04c887e5f2b6ea771",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06b23fdc556a20bdb",
            "security_group_rule_id": "sgr-04c887e5f2b6ea771",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-sg-free-tier",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4_3005",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:security-group-rule/sgr-0f592885d8b8b7e8e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3005,
            "id": "sgr-0f592885d8b8b7e8e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06b23fdc556a20bdb",
            "security_group_rule_id": "sgr-0f592885d8b8b7e8e",
            "tags": null,
            "tags_all": {},
            "to_port": 3005
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-sg-free-tier.aws_security_group.aws-public-sg",
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-0bc23955a27de1c00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc23955a27de1c00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-private-us-east-1a"
            },
            "tags_all": {
              "Name": "dev-subnet-private-us-east-1a"
            },
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-0e171156e6009467e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e171156e6009467e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-private-us-east-1b"
            },
            "tags_all": {
              "Name": "dev-subnet-private-us-east-1b"
            },
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-015279da7ef97e42c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015279da7ef97e42c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-public-us-east-1a"
            },
            "tags_all": {
              "Name": "dev-subnet-public-us-east-1a"
            },
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-subnet-free-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws-subnet-public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:subnet/subnet-0f44c5359e5a10058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44c5359e5a10058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "207567780191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-public-us-east-1b"
            },
            "tags_all": {
              "Name": "dev-subnet-public-us-east-1b"
            },
            "vpc_id": "vpc-01cd0e09fe5a1d7c8"
          },
          "dependencies": [
            "module.aws-vpc-free-tier.aws_vpc.aws-vpc-free-tier"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc-free-tier",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc-free-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:207567780191:vpc/vpc-01cd0e09fe5a1d7c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e6ba5337b22bcc4",
            "default_route_table_id": "rtb-05243741341bc5797",
            "default_security_group_id": "sg-0206505b3ee3b38c3",
            "dhcp_options_id": "dopt-0111d916f6c4dc792",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cd0e09fe5a1d7c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05243741341bc5797",
            "owner_id": "207567780191",
            "tags": {
              "Name": "dev-vpc-free-tier"
            },
            "tags_all": {
              "Name": "dev-vpc-free-tier"
            }
          }
        }
      ]
    }
  ]
}